--- a/style.css
+++ b/style.css
@@ -811,10 +811,10 @@ body.view-control-buttons .viewControlButton {
 
 /* Center is at margin-left: -20px */
 .viewControlButton-1 {
-  margin-left: -145px;
+  margin-left: 105px;
 }
 .viewControlButton-2 {
-  margin-left: -95px;
+  margin-left: 55px;
 }
 .viewControlButton-3 {
   margin-left: -45px;
@@ -823,8 +823,22 @@ body.view-control-buttons .viewControlButton {
   margin-left: 5px;
 }
 .viewControlButton-5 {
-  margin-left: 55px;
+  margin-left: 155px;
 }
 .viewControlButton-6 {
-  margin-left: 105px;
+  margin-left: 205px;
 }
+
+.viewControlButton-7 {
+  margin-left: -95px;
+}
+.viewControlButton-8 {
+  margin-left: -145px;
+}
+.viewControlButton-9 {
+  margin-left: -195px;
+}
+.viewControlButton-10 {
+  margin-left: -245px;
+}
+
